--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Files that exceed GitHub's file size limit
+logs/LogsAccessToCamera.pcapng
+logs/LogsRingDisconexion.pcapng
+logs/LogsSwitchUnplaged.pcapng
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
